# lyrics-tool

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  development.md  lrc-format.md  usage.md
src/lrc_tools/: __about__.py  __init__.py  audio.py  cover.py  effects.py  exceptions.py  lrc_processor_cli.py  lrc_puller_cli.py  lrc_vis_cli.py  processor_main.py  puller.py  visualizer_display.py  visualizer_main.py  visualizer_player.py
src/lrc_tools/api/: puller.py
src/lrc_tools/cli/: fetch.py  main.py  process.py  vis.py
src/lrc_tools/parser/: core.py  processor.py
src/lrc_tools/render/: display.py  effects.py  main.py
src/lrc_tools/sync/: player.py
src/lyrics_tool/: __init__.py  audio.py  cli_cook.py  cli_fetch.py  cli_visualizer.py  config.py  config_example.yaml  cover.py  custom_fonts.json  parser.py  paths.py  processor_main.py  puller.py
tests/: test_cover.py  test_effects.py  test_parser.py  test_processor.py  test_render.py  test_visualizer.py
