[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lrc-tools"
dynamic = ["version"]
description = "Terminal lyrics visualizer and LRC/WLRC processing suite (playerctl + LRCLIB)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Hamza Abdelmoumene" }]
keywords = ["lyrics", "lrc", "wlrc", "spotify", "playerctl", "terminal", "tui"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "syncedlyrics>=0.7",
    "mutagen>=1.45",
    "PyYAML>=6.0",
    "Pillow>=9.0",  # album-cover colour extraction for the now-playing card
]

[project.optional-dependencies]
# Per-word onset detection (real timing instead of even spacing).
onset = ["librosa>=0.10", "numpy>=1.23"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.3",
    "mypy>=1.0",
    "types-PyYAML>=6.0"
]

[project.scripts]
lyrics-tool = "lrc_tools.cli.main:main"

[project.urls]
Homepage = "https://github.com/hamza-abdel/lrc-tools"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {attr = "lrc_tools.__about__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lrc_tools = ["custom_fonts.json", "config_example.yaml"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
