[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrics-tool"
version = "0.1.0"
description = "Terminal lyrics visualizer and LRC/WLRC processing suite (playerctl + LRCLIB)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Hamza Abdelmoumene" }]
keywords = ["lyrics", "lrc", "wlrc", "spotify", "playerctl", "terminal", "tui"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "syncedlyrics>=0.7",
    "mutagen>=1.45",
    "PyYAML>=6.0",
    "Pillow>=9.0",  # album-cover colour extraction for the now-playing card
]

[project.optional-dependencies]
# Per-word onset detection (real timing instead of even spacing).
onset = ["librosa>=0.10", "numpy>=1.23"]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
lyricsooo = "lyrics_tool.cli_visualizer:main"
lyricsooo-fetch = "lyrics_tool.cli_fetch:main"
lyricsooo-cook = "lyrics_tool.cli_cook:main"

[project.urls]
Homepage = "https://github.com/hamza-abdelmoumene/lyrics-tool"
Repository = "https://github.com/hamza-abdelmoumene/lyrics-tool"
Issues = "https://github.com/hamza-abdelmoumene/lyrics-tool/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lyrics_tool = ["custom_fonts.json", "config_example.yaml"]

[tool.ruff.lint]
# Default rules (E, F) plus ignore E741: single-letter `l` reads as "line"/"letter"
# in the renderer loops and is clear in context.
ignore = ["E741"]
